--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,17 @@
+:root {
+    --primary-color: #17a2b8;
+    --dark-color: #343a40;
+    --light-color: #f4f4f4;
+    --danger-color: #dc3545;
+    --success-color: #28a745;
+  }
+  
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
 .x-large {
     font-size: 4rem;
     line-height: 1.2;
@@ -86,3 +100,67 @@
     justify-content: center;
     text-align: center;
 }
+
+.alert {
+    padding: 0.8rem;
+    text-align: center;
+    margin: 1rem 0;
+    opacity: 0.9;
+    background: var(--light-color);
+    color: #333;
+    border-radius: 6px;
+    -o-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+  }
+  
+  .btn-primary,
+  .bg-primary,
+  .badge-primary,
+  .alert-primary {
+    background: var(--primary-color);
+    color: #fff;
+  }
+  
+  .btn-light,
+  .bg-light,
+  .badge-light,
+  .alert-light {
+    background: var(--light-color);
+    color: #333;
+  }
+  
+  .btn-dark,
+  .bg-dark,
+  .badge-dark,
+  .alert-dark {
+    background: var(--dark-color);
+    color: #fff;
+  }
+  
+  .btn-danger,
+  .bg-danger,
+  .badge-danger,
+  .alert-danger {
+    background: var(--danger-color);
+    color: #fff;
+  }
+  
+  .btn-success,
+  .bg-success,
+  .badge-success,
+  .alert-success {
+    background: var(--success-color);
+    color: #fff;
+  }
+  
+  .btn-white,
+  .bg-white,
+  .badge-white,
+  .alert-white {
+    background: #fff;
+    color: #333;
+    border: #ccc solid 1px;
+  }
+  
