Added the ability to login register and logout

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -155,12 +155,16 @@
     color: #fff;
   }
   
-  .btn-white,
-  .bg-white,
-  .badge-white,
-  .alert-white {
+.btn-white,
+.bg-white,
+.badge-white,
+.alert-white {
     background: #fff;
     color: #333;
     border: #ccc solid 1px;
-  }
+}
+
+.hide-sm {
+    display: none;
+}
   
