--- a/client/src/App.css
+++ b/client/src/App.css
@@ -163,8 +163,46 @@
     color: #333;
     border: #ccc solid 1px;
 }
+form .social-input {
+    display: flex;
+  }  
+  form .social-input i {
+    padding: 0.5rem;
+    width: 4rem;
+  }
+  form .social-input i.fa-twitter {
+    color: #38a1f3;
+  }
+  form .social-input i.fa-facebook {
+    color: #3b5998;
+  }
+  form .social-input i.fa-instagram {
+    color: #3f729b;
+  }
+  form .social-input i.fa-youtube {
+    color: #c4302b;
+  }
+  form .social-input i.fa-linkedin {
+    color: #0077b5;
+  }
 
-.hide-sm {
-    display: none;
+@media (max-width: 700px) {
+    .hide-sm {
+      display: none;
+    }
+    .nav-wrapper {
+        display: block;
+        text-align: center;
+    }
+    .nav-wrapper ul {
+        text-align: center;
+        justify-content: center;
+    }
+    .nav-wrapper h1 {
+        margin-bottom: 1rem;
+    }
+    .nav-wrapper .brand-logo {
+        display: none;
+    }
 }
   
